# qubinode_kvmhost_setup_collection

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .security-config.toml  .security-ignore  .yamllint  CHANGELOG-0.10.0.md  CHANGELOG.rst  COMMIT_MESSAGE.md  CONTRIBUTING.md  Dockerfile  FINDINGS.md  LINT_FIXES_APPLIED.md  Makefile  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  README.md  RELEASE_READY.md  RESOLUTION_SUMMARY.md  TESTING_INSTRUCTIONS.md  TODO.md  _version.py  ansible.cfg  deploy_fix.sh  development.md  galaxy.yml  notes.md  package-lock.json  package.json  prompt.md  push_fix.sh  pyproject.toml  requirements-dev.txt  requirements-py311.txt  requirements.txt  requirements.yml  simple-dependency-check.yml  structure-validation-20250715_201500.json  structure-validation-report.md  test-auto-release.md  (+10 more)
.github/: SHELL_COMMAND_FIX.md  WORKFLOW_FIX.md  ansible-lint-automation-config.yml  copilot-instructions.md  dependabot.yml
compliance-reports/: adr-compliance-20250715_193000.json  adr-compliance-20250715_194916.json  adr-compliance-20250715_195026.json  adr-compliance-summary.md
docs/: AIDER_LINT_INTEGRATION.md  ANSIBLE_COLLECTION_SECURITY.md  AUTOMATED_DEPENDENCY_TESTING.md  AUTOMATION_ENABLEMENT_STRATEGY.md  DEPENDABOT_SETUP_GUIDE.md  DEVOPS_AUTOMATION_FRAMEWORK.md  DIATAXIS_MIGRATION_PLAN.md  GEMINI_LINT_WORKFLOW.md  MIGRATION_COMPLETION_SUMMARY.md  MOLECULE_MIGRATION_GUIDE.md  Makefile  README.md  REDHAT_REGISTRY_SETUP.md  RELEASE_STRATEGY.md  SPHINX_SETUP_GUIDE.md  WORKFLOW_FAILURE_ANALYZER.md  ansible-version-automation.md  build-docs.sh  compatibility_matrix.json  compatibility_report.md  conf.py  index.md  index.rst  installation.md  libvirt_kvm_testing.md  overview.md  requirements.txt  validate-docs.sh
examples/: README.md  inventory.yml  setup-kvmhost.yml
molecule/: AVAILABLE_INIT_IMAGES.md
reports/: ansible_lint_results_0.9.1_20250807_034942.json  git_analysis_results_0.9.1_20250807_034942.json  knowledge_graph_0.9.1_20250807_034942.json  mypy_results_0.9.1_20250807_034942.json  pylint_results_0.9.1_20250807_034942.json  release_0.9.1_20250807_034942.markdown
roles/: requirements.yml  role_config.yml
rules/: architectural-rules.yaml  local-molecule-testing-rules.json
scripts/: LLM_DOCUMENTATION_INDEX.md  README-EPEL-FIX.md  README.md  activate-molecule-env.sh  adr-compliance-checker.sh  analyze-automation-issues.sh  analyze-security-false-positives.sh  analyze-tdd-implementation.sh  ansible-collection-security-check.sh  ansible_lint_toolkit.sh  automation_dashboard.sh  check-ansible-updates.sh  check-ansible-versions.sh  check-compliance.sh  check-molecule-security.sh  check-rhel10-packages.sh  check-stuck-containers.sh  compare-environments.sh  comprehensive-lint-fixes.sh  debug-validate.sh  dependency-validation-pipeline.sh  dev-security-workflow.sh  emergency-cleanup-containers.sh  enhanced-dependency-scanner.sh  enhanced-security-scan.sh  fix-ci-repo-gpg-issues.sh  fix-epel-on-runner.sh  fix_ansible_lint.py  fix_ansible_lint_advanced.py  fix_escape_chars.py  fix_yaml_parsing.py  generate-compatibility-matrix.sh  generate-migration-templates.sh  generate_compatibility_matrix.py  libvirt_testenv.sh  (+34 more)
(+604 files in other folders)
